<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <groupId>org.mage</groupId>
    <artifactId>mage-root</artifactId>
    <version>1.4.21</version>
    <packaging>pom</packaging>
    <name>Mage Root</name>
    <description>Mage Root POM</description>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.5.1</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                    <encoding>UTF-8</encoding>
                    <!--
                    Because of known error in maven-compiler-plugin 3.2 useIncrementalCompilation is inverted
                    so remove this arg with update that fixes the problem
                    https://jira.codehaus.org/browse/MCOMPILER-209
                    -->
                    <useIncrementalCompilation>false</useIncrementalCompilation>
                    <!--                    <compilerArgument>-Xlint:all</compilerArgument> -->
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-resources-plugin</artifactId>
                <version>2.7</version>
                <configuration>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-jar-plugin</artifactId>
                <version>2.5</version>
                <configuration>
                    <archive>
                        <manifestEntries>
                            <Built-By>MageTeam</Built-By>
                        </manifestEntries>
                    </archive>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <modules>
        <module>Mage</module>
        <module>Mage.Common</module>
        <module>Mage.Server</module>
        <module>Mage.Sets</module>
        <module>Mage.Client</module>
        <module>Mage.Plugins</module>
        <module>Mage.Server.Plugins</module>
        <module>Mage.Server.Console</module>
        <module>Mage.Tests</module>
        <module>Mage.Updater</module>
        <module>Mage.Stats</module>
        <module>Mage.Verify</module>
    </modules>

    <repositories>
        <repository>
            <id>jboss-public-repository</id>
            <name>JBoss Repository</name>
            <url>https://repository.jboss.org/nexus/content/groups/public</url>
            <!-- These optional flags are designed to speed up your builds by reducing remote server calls -->
            <releases>
                <updatePolicy>never</updatePolicy>
            </releases>
            <snapshots>
                <updatePolicy>daily</updatePolicy>
            </snapshots>
        </repository>
        <repository>
            <id>local-project-repo</id>
            <url>file://${basedir}/repository</url>
        </repository>
    </repositories>

    <properties>
        <mage-version>1.4.21</mage-version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>junit</groupId>
                <artifactId>junit</artifactId>
                <version>4.12</version>
            </dependency>
            <dependency>
                <groupId>log4j</groupId>
                <artifactId>log4j</artifactId>
                <version>1.2.17</version>
            </dependency>
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-log4j12</artifactId>
                <version>1.7.19</version>
            </dependency>
        </dependencies>
    </dependencyManagement>
</project>
